--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/.bin/rollup -c",
     "dev": "rollup -c -w",
-    "prod": "netlify-lambda build express",
-    "build": "netlify-lambda build express",
+    "prod": "netlify-lambda build server",
+    "build": "netlify-lambda build server",
     "start": "node server.js"
   },
   "author": "",
