--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/.bin/rollup -c",
     "dev": "rollup -c -w",
-    "prod": "netlify-lambda build server",
-    "build": "netlify-lambda build server",
+    "build": "netlify-lambda build express",
     "start": "node server.js"
   },
   "author": "",
@@ -16,7 +15,6 @@
   "dependencies": {
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
-    "express": "^4.17.1",
     "rollup": "^2.39.1",
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-watch": "^3.0.0",
@@ -26,6 +24,10 @@
   "devDependencies": {
     "body-parser": "^1.19.0",
     "rollup-plugin-postcss": "^0.2.0",
-    "rollup-plugin-scss": "^2.6.1"
+    "rollup-plugin-scss": "^2.6.1",
+    "express": "^4.17.1",
+    "netlify-lambda": "^1.6.3",
+    "nodemon": "^1.19.2",
+    "serverless-http": "^2.3.0"
   }
 }
